creacion de paginas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,8 @@
     <ion-menu contentId="main-content" type="overlay">
       <ion-content>
         <ion-list id="inbox-list">
-          <ion-list-header>Inbox</ion-list-header>
-          <ion-note>hi&#64;ionicframework.com</ion-note>
+          <ion-list-header>JobInsight</ion-list-header>
+          <ion-note>Suena Chido</ion-note>
 
           @for (p of appPages; track p; let i = $index) {
             <ion-menu-toggle auto-hide="false">
@@ -17,7 +17,7 @@
         </ion-list>
 
         <ion-list id="labels-list">
-          <ion-list-header>Labels</ion-list-header>
+          <ion-list-header>Etiquetas</ion-list-header>
 
           @for (label of labels; track label) {
             <ion-item lines="none">
