--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,2 +1,19 @@
 // For information on how to create your own theme, please see:
 // http://ionicframework.com/docs/theming/
+:root {
+	--ion-color-favorite: #303030;
+	--ion-color-favorite-rgb: 48,48,48;
+	--ion-color-favorite-contrast: #ffffff;
+	--ion-color-favorite-contrast-rgb: 255,255,255;
+	--ion-color-favorite-shade: #2a2a2a;
+	--ion-color-favorite-tint: #454545;
+}
+
+.ion-color-favorite {
+	--ion-color-base: var(--ion-color-favorite);
+	--ion-color-base-rgb: var(--ion-color-favorite-rgb);
+	--ion-color-contrast: var(--ion-color-favorite-contrast);
+	--ion-color-contrast-rgb: var(--ion-color-favorite-contrast-rgb);
+	--ion-color-shade: var(--ion-color-favorite-shade);
+	--ion-color-tint: var(--ion-color-favorite-tint);
+}
