errorPage and others

--- a/src/app/pages/create-job-posting/create-job-posting.page.html
+++ b/src/app/pages/create-job-posting/create-job-posting.page.html
@@ -46,9 +46,12 @@
   </ion-item>
 
   <ion-item>
-    <ion-label position="floating">Fecha de Publicación</ion-label>
-    <ion-datetime displayFormat="YYYY-MM-DD" [(ngModel)]="nuevaOferta.fechaPublicacion"></ion-datetime>
+    <ion-label position="stacked">Fecha de Publicación</ion-label>
+    <ion-text color="medium">
+      <p>{{ nuevaOferta.fechaPublicacion }}</p>
+    </ion-text>
   </ion-item>
+
 
   <ion-item>
     <ion-label position="floating">Salario</ion-label>
