--- a/src/app/pages/sing-in/sing-in.page.html
+++ b/src/app/pages/sing-in/sing-in.page.html
@@ -9,48 +9,48 @@
         Crear Cuenta
       </ion-card-header>
       <ion-card-content>
-        <form>
+        <form (ngSubmit)="registrarUsuario()">
           <ion-item>
             <ion-label position="stacked">Nombre</ion-label>
-            <ion-input name="nombre" required></ion-input>
+            <ion-input [(ngModel)]="usuario.nombre" name="nombre" required></ion-input>
           </ion-item>
 
           <ion-item>
             <ion-label position="stacked">Apellido</ion-label>
-            <ion-input name="apellido" required></ion-input>
+            <ion-input [(ngModel)]="usuario.apellido" name="apellido" required></ion-input>
           </ion-item>
 
           <ion-item>
             <ion-label position="stacked">Email</ion-label>
-            <ion-input type="email" required></ion-input>
+            <ion-input [(ngModel)]="usuario.email" name="email" type="email" required></ion-input>
           </ion-item>
 
           <ion-item>
             <ion-label position="stacked">Contraseña</ion-label>
-            <ion-input type="password" required></ion-input>
+            <ion-input [(ngModel)]="usuario.password" name="password" type="password" required></ion-input>
           </ion-item>
 
           <ion-item>
             <ion-label position="stacked">Teléfono</ion-label>
-            <ion-input></ion-input>
+            <ion-input [(ngModel)]="usuario.telefono" name="telefono"></ion-input>
           </ion-item>
 
           <ion-item>
             <ion-label position="stacked">Dirección</ion-label>
-            <ion-input></ion-input>
+            <ion-input [(ngModel)]="usuario.direccion" name="direccion"></ion-input>
           </ion-item>
 
           <ion-item>
             <ion-label position="stacked">Tipo</ion-label>
-            <ion-select>
-              <ion-select-option>Administrador</ion-select-option>
-              <ion-select-option>Usuario</ion-select-option>
+            <ion-select [(ngModel)]="usuario.tipo" name="tipo" required>
+              <ion-select-option value="CANDIDATO">Candidato</ion-select-option>
+              <ion-select-option value="EMPLEADOR">Empleador</ion-select-option>
             </ion-select>
           </ion-item>
 
           <div class="ion-text-center ion-margin-top">
             <ion-button expand="block" type="submit" color="primary">Registrar</ion-button>
-            <ion-label class="forgot-password" (click)="routerLogIn()">¿Ya tienes una cuenta? Inicia Sesion</ion-label>
+            <ion-label class="forgot-password" (click)="routerLogIn()">¿Ya tienes una cuenta? Inicia Sesión</ion-label>
           </div>
         </form>
       </ion-card-content>
