--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,25 +7,29 @@
           <ion-note>Suena Chido</ion-note>
 
           @for (p of appPages; track p; let i = $index) {
-            <ion-menu-toggle auto-hide="false">
-              <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" routerLinkActive="selected">
-                <ion-icon aria-hidden="true" slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
+          <ion-menu-toggle auto-hide="false">
+            <ion-item *ngIf="p.url; else actionButton" routerDirection="root" [routerLink]="[p.url]" lines="none"
+              detail="false" routerLinkActive="selected">
+              <ion-icon aria-hidden="true" slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
+              <ion-label>{{ p.title }}</ion-label>
+            </ion-item>
+
+            <ng-template #actionButton>
+              <ion-item button (click)="logOut()" lines="none" detail="false">
+                <ion-icon aria-hidden="true" slot="start" [ios]="p.icon + '-outline'"
+                  [md]="p.icon + '-sharp'"></ion-icon>
                 <ion-label>{{ p.title }}</ion-label>
               </ion-item>
-            </ion-menu-toggle>
+            </ng-template>
+          </ion-menu-toggle>
           }
         </ion-list>
-
-        <ion-list id="labels-list">
-          <ion-list-header>Etiquetas</ion-list-header>
-
-          @for (label of labels; track label) {
-            <ion-item lines="none">
-              <ion-icon aria-hidden="true" slot="start" ios="bookmark-outline" md="bookmark-sharp"></ion-icon>
-              <ion-label>{{ label }}</ion-label>
+        <!-- <ion-menu-toggle>
+            <ion-item (click)="logOut()">
+              <ion-icon name="log-out"></ion-icon>
+              <ion-label> Cerrar Sesion </ion-label> 
             </ion-item>
-          }
-        </ion-list>
+          </ion-menu-toggle> -->
       </ion-content>
     </ion-menu>
     <ion-router-outlet id="main-content"></ion-router-outlet>
