--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -31,6 +31,12 @@
             <li *ngFor="let exp of oferta.requisitosExperiencia">{{ exp }}</li>
           </ul>
         </div>
+
+        <!-- Botón para postular -->
+        <ion-button expand="block" color="primary" (click)="postularAOferta(oferta.id)">
+          Postularme
+        </ion-button>
+
       </ion-card-content>
     </ion-card>
   </ion-list>
