--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -10,17 +10,27 @@
       <ion-card-content>
         <ion-item lines="none" class="input-item">
           <ion-label position="stacked">Usuario</ion-label>
-          <ion-input type="text" placeholder="Ingrese su usuario"></ion-input>
+          <ion-input
+            type="text"
+            placeholder="Ingrese su usuario"
+            [(ngModel)]="email">
+          </ion-input>
         </ion-item>
 
         <ion-item lines="none" class="input-item">
           <ion-label position="stacked">Clave</ion-label>
-          <ion-input type="password" placeholder="Ingrese su clave"></ion-input>
+          <ion-input
+            type="password"
+            placeholder="Ingrese su clave"
+            [(ngModel)]="password">
+          </ion-input>
         </ion-item>
 
         <div class="ion-text-center">
           <ion-button expand="block" (click)="login()">Iniciar Sesión</ion-button>
-          <ion-label class="forgot-password"(click)="routerSingIng()">¿Olvidó su contraseña?</ion-label>
+          <ion-label class="forgot-password" (click)="routerSingIng()">
+            No tienes una Cuenta? Registrate!
+          </ion-label>
         </div>
       </ion-card-content>
     </ion-card>
